--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 
 <head>
   <meta charset='utf-8'>
-
+  <title>hw-06</title>
+  <link rel="stylesheet" href="style.css">
+  <script src='js/d3.v6.1.1/d3.min.js'></script>
 </head>
 
 
 <body>
- 
+  <h1>hw-06 - D3 Brushing & Linking</h1>
+
+  <div class="container">
+    
+      <div class="column" id="column1">Petal_Length vs Sepal_Length</div>
+
+      <div class="column" id="column2">Petal_Width vs Sepal_Width</div>
+
+      <div class="column" id="column3">Counts of Species</div>
+    
+
+  <script src="main.js"></script> 
 </body>
 
 </html>
