--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="column" id="column3">Counts of Species</div>
     
 
-  <script src="main.js"></script> 
+  <script src="js//main.js"></script> 
 </body>
 
 </html>
