--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 
   <div class="container">
     
-      <div class="column" id="column1">Petal_Length vs Sepal_Length</div>
+      <div class="column" id="column1">
+        <h3>Petal_Length vs Sepal_Length</h3>
+      </div>
 
-      <div class="column" id="column2">Petal_Width vs Sepal_Width</div>
+      <div class="column" id="column2">
+        <h3>Petal_Width vs Sepal_Width</h3>
+      </div>
 
-      <div class="column" id="column3">Counts of Species</div>
+      <div class="column" id="column3">
+        <h3>Counts of Species</h3>
+      </div>
     
 
   <script src="js//main.js"></script> 
