add acknowlegements, formatting, cleaning code

--- a/index.html
+++ b/index.html
@@ -26,9 +26,26 @@
       <div class="column" id="column3">
         <h3>Counts of Species</h3>
       </div>
-    
 
-  <script src="js//main.js"></script> 
+  </div>
+
+  <div>
+     <div id="Acknowledgements">
+        <h2 class="acknowledgements" id="ack-header">Acknowledgements</h2>
+         <ul>
+            <li>https://www.w3schools.com/css/default.asp</li>
+            <li>https://www.geeksforgeeks.org/html-introduction/?ref=lbp</li>
+            <li>https://css-tricks.com/snippets/css/a-guide-to-flexbox/</li>
+            <li>https://www.w3schools.com/html/default.asp</li>
+            <li>https://www.geeksforgeeks.org/html-tags-a-to-z-list/?ref=lbp</li>
+            <li>https://www.w3schools.com/graphics/svg_intro.asp</li>
+            <li>http://www.w3.org/2000/svg</li>
+        </ul>
+    </div>
+
+<!-- Include Javascript -->
+  <script src="js/main.js"></script> 
+  
 </body>
 
 </html>
